# ai_command_master

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
ai-command-master/: cli.py  core.py
ai_command_master/: cli.py  config.py  core.py  data_formatter.py  execution.py  system.py
ai_command_master/api_clients/: base.py  deepseek.py  factory.py  moonshot.py
ai_command_master/config/: config.yaml  config.yaml.example  default.yaml
